--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   db:
     image: mysql:8.0
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}  # Naudoja .env arba "root"
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}  
       MYSQL_DATABASE: library_db
       MYSQL_USER: symfony
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-symfony}
@@ -26,7 +26,7 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql  # Jei reikia
+      - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql  
 
 ###> doctrine/doctrine-bundle ###
   database:
