✨ Add Webpack Encore, JS form submission and AJAX foundation

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/security-csrf": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/validator": "7.2.*",
+        "symfony/webpack-encore-bundle": "^2.2",
         "symfony/yaml": "7.2.*"
     },
     "require-dev": {
@@ -88,4 +89,3 @@
             }
         ]
     }
-
