--- a/.env
+++ b/.env
@@ -26,5 +26,5 @@ APP_SECRET=
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://root:SLitaQCpaBtBOCUsWcrQqXsxoFofExbp@mysql.railway.internal:3306/railway?serverVersion=8.0&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
