--- a/.env
+++ b/.env
@@ -15,8 +15,10 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=
+# APP_ENV=dev
+# APP_SECRET=
+APP_ENV=prod
+APP_SECRET=SomeSecretKey123456789
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
