--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "start": "php -S 0.0.0.0:8000 -t public"
     },
     "name": "library_app",
     "version": "1.0.0",
