--- a/.env
+++ b/.env
@@ -28,6 +28,6 @@ APP_SECRET=SomeSecretKey123456789
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://root:zlGlUwHxQGjfqJqNQNFpnKVzLhDucNGp@mysql.railway.internal:3306/railway?serverVersion=8.0"
+DATABASE_URL="mysql://root:IKUfhvkAEZaaWqCTgpFnIqqjkviNdXzE@mysql.railway.internal:3306/railway"
 
 ###< doctrine/doctrine-bundle ###
