--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,21 @@
 services:
   php:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - .:/var/www/html
+    build: .
     ports:
       - "8000:8000"
     depends_on:
       - db
-    working_dir: /var/www/html
-    command: php -S 0.0.0.0:8000 -t public
     environment:
-      DATABASE_URL: mysql://symfony:symfony@db:3306/library_db
+      DATABASE_URL: "mysql://symfony:symfony@db:3306/library_db"
 
   db:
     image: mysql:8.0
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}  
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: library_db
       MYSQL_USER: symfony
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-symfony}
+      MYSQL_PASSWORD: symfony
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./docker/mysql/init.sql:/docker-entrypoint-initdb.d/init.sql  
-
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    healthcheck:
-      test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB:-app}", "-U", "${POSTGRES_USER:-app}"]
-      timeout: 5s
-      retries: 5
-      start_period: 60s
-    volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
-
-volumes:
-  db_data:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
