--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "phpunit/phpunit": "^11.5",
         "symfony/browser-kit": "7.2.*",
         "symfony/css-selector": "7.2.*",
-        "symfony/maker-bundle": "^1.62",
+        "symfony/maker-bundle": "*",
         "symfony/phpunit-bridge": "^7.2"
     },
     "config": {
