--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,38 @@
 services:
   php:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        APP_ENV: dev
+    environment:
+      - APP_ENV=dev
+      - PORT=8000
     ports:
       - "8000:8000"
+    volumes:
+      - .:/var/www/html
     depends_on:
       - db
-    environment:
-      DATABASE_URL: "mysql://symfony:symfony@db:3306/library_db"
 
   db:
     image: mysql:8.0
+    container_name: library_app-db-1
+    restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: library_db
-      MYSQL_USER: symfony
-      MYSQL_PASSWORD: symfony
+      MYSQL_DATABASE: library
+      MYSQL_USER: library_user
+      MYSQL_PASSWORD: library_pass
     ports:
       - "3306:3306"
     volumes:
-      - db_data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  mysql_data:
